# ERP

./: .env.example  .gitignore  LICENSE  Makefile  README.md  University_ERP_Capstone_Documentation.md  pyproject.toml
.github/workflows/: ci.yml
docs/: REMAINING_MODULES.md  RUNBOOK.md
docs/superpowers/: HANDOFF.md
frontend/su-erp-web/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
gateway/: Dockerfile  nginx.conf
infra/: .env.example  docker-compose.yml
infra/pgbouncer/: pgbouncer.ini  userlist.txt
infra/postgres/: init-multi-db.sh
infra/prometheus/: prometheus.yml
scripts/: chaos_broker_outage.sh
services/ai-service/: .env.example  Dockerfile  pytest.ini  requirements.txt
services/analytics-service/: .env.example  Dockerfile  requirements.txt
services/attendance-service/: .env.example  Dockerfile
services/auth-service/: .env.example  Dockerfile  requirements.txt
services/canteen-service/: .env.example  Dockerfile  requirements.txt
services/exam-service/: Dockerfile  (+1 more)
shared/libs/suerp_common/: pyproject.toml
shared/libs/suerp_common/suerp_common/: auth.py  envelope.py  events.py  inbox.py  models.py  outbox.py  permissions.py  razorpay_gateway.py  tenancy.py
shared/libs/suerp_common/suerp_common/migrations/: 0001_initial.py
shared/libs/suerp_common/tests/: settings.py  test_auth.py  test_envelope.py  test_events.py  test_inbox.py  test_outbox.py  test_permissions.py  test_tenancy.py  test_tenant_middleware.py
shared/libs/suerp_common/tests/testapp/: apps.py  models.py
(+335 files in other folders)
