[project]
name = "suerp-common"
version = "0.1.0"
description = "Shared library for SU-ERP microservices: tenancy, zero-trust JWT, response envelope, transactional outbox, idempotent event consumers."
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "djangorestframework>=3.15",
    "pyjwt>=2.8",
    "pika>=1.3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-django>=4.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["suerp_common*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]
python_files = ["test_*.py"]
addopts = "-q"
